# prog-tech-server

./: CMakeLists.txt  cfg.h  definitions.h  main.cpp  vcpkg.json
Server/: ServerPlugin.cpp  ServerPlugin.h
Server/collected_data/76561198199692363/: 7594795105.json  7600465479.json
Server/collected_data/test/: 12345.json
Server/core/: Server.cpp  Server.h
Server/executor/: LoadExecutor.cpp  LoadExecutor.h  SaveExecutor.cpp  SaveExecutor.h
Server/include/: BoostBeastInclude.h  BoostJsonInclude.h  StlInclude.h
Server/processor/: GetRequestProcessor.cpp  GetRequestProcessor.h  ItemsProcessor.cpp  ItemsProcessor.h  PostRequestProcessor.cpp  PostRequestProcessor.h
Server/static/: items.json
Server/storage/: TimelineJsonStorage.cpp  TimelineJsonStorage.h
Server/struct/: ServerOptions.h
